; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/mvpp2/extr_mvpp2_main.c_mvpp2_read_count.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/mvpp2/extr_mvpp2_main.c_mvpp2_read_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mvpp2_port = type { i64 }
%struct.mvpp2_ethtool_counter = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mvpp2_port*, %struct.mvpp2_ethtool_counter*)* @mvpp2_read_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mvpp2_read_count(%struct.mvpp2_port* %0, %struct.mvpp2_ethtool_counter* %1) #0 {
  %3 = alloca %struct.mvpp2_port*, align 8
  %4 = alloca %struct.mvpp2_ethtool_counter*, align 8
  %5 = alloca i32, align 4
  store %struct.mvpp2_port* %0, %struct.mvpp2_port** %3, align 8
  store %struct.mvpp2_ethtool_counter* %1, %struct.mvpp2_ethtool_counter** %4, align 8
  %6 = load %struct.mvpp2_port*, %struct.mvpp2_port** %3, align 8
  %7 = getelementptr inbounds %struct.mvpp2_port, %struct.mvpp2_port* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.mvpp2_ethtool_counter*, %struct.mvpp2_ethtool_counter** %4, align 8
  %10 = getelementptr inbounds %struct.mvpp2_ethtool_counter, %struct.mvpp2_ethtool_counter* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = add nsw i64 %8, %11
  %13 = call i32 @readl(i64 %12)
  store i32 %13, i32* %5, align 4
  %14 = load %struct.mvpp2_ethtool_counter*, %struct.mvpp2_ethtool_counter** %4, align 8
  %15 = getelementptr inbounds %struct.mvpp2_ethtool_counter, %struct.mvpp2_ethtool_counter* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %31

18:                                               ; preds = %2
  %19 = load %struct.mvpp2_port*, %struct.mvpp2_port** %3, align 8
  %20 = getelementptr inbounds %struct.mvpp2_port, %struct.mvpp2_port* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load %struct.mvpp2_ethtool_counter*, %struct.mvpp2_ethtool_counter** %4, align 8
  %23 = getelementptr inbounds %struct.mvpp2_ethtool_counter, %struct.mvpp2_ethtool_counter* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = add nsw i64 %21, %24
  %26 = add nsw i64 %25, 4
  %27 = call i32 @readl(i64 %26)
  %28 = shl i32 %27, 32
  %29 = load i32, i32* %5, align 4
  %30 = add nsw i32 %29, %28
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %18, %2
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @readl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
